*SVN*

* Optimistic locking: revert the lock version when an update fails.  #7840 [plang]

* Migrations: add_column supports custom column types.  #7742 [jsgarvin, Theory]

* Load database adapters on demand. Eliminates config.connection_adapters and RAILS_CONNECTION_ADAPTERS. Add your lib directory to the $LOAD_PATH and put your custom adapter in lib/active_record/connection_adapters/adaptername_adapter.rb. This way you can provide custom adapters as plugins or gems without modifying Rails. [Jeremy Kemper]

* Ensure that associations with :dependent => :delete_all respect :conditions option.  Closes #8034 [danger, joshpeek, Rick]

* belongs_to assignment creates a new proxy rather than modifying its target in-place.  #8412 [mmangino@elevatedrails.com]

* Fix column type detection while loading fixtures.  Closes #7987 [roderickvd]

* Document deep eager includes.  #6267 [Josh Susser, Dan Manges]

* Document warning that associations names shouldn't be reserved words.  #4378 [murphy@cYcnus.de, Josh Susser]

* Sanitize Base#inspect.  #8392 [Nik Wakelin]

* Replace the transaction {|transaction|..} semantics with a new Exception ActiveRecord::Rollback.   [Koz]

* Oracle: extract column length for CHAR also.  #7866 [ymendel]

* Document :allow_nil option for validates_acceptance_of since it defaults to true. [tzaharia]

* Update documentation for :dependent declaration so that it explicitly uses the non-deprecated API. [danger]

* Add documentation caveat about when to use count_by_sql. [fearoffish]

* Enhance documentation for increment_counter and decrement_counter. [fearoffish]

* Provide brief introduction to what optimistic locking is. [fearoffish]

* Add documentation for :encoding option to mysql adapter. [marclove]

* Added short-hand declaration style to migrations (inspiration from Sexy Migrations, http://errtheblog.com/post/2381) [DHH]. Example:

    create_table "products" do |t|
      t.column "shop_id",    :integer
      t.column "creator_id", :integer